// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CAvatarGroup does not render number if max is higher than avatars 1`] = `
<DocumentFragment>
  <div
    class="chakra-avatar__group chakra-1rs5v3u"
    role="group"
  >
    <!---->
    <span
      class="chakra-avatar chakra-1exxn2a"
    >
      <div
        aria-label="Jonathan Bakebwa"
        class="chakra-uo84k3"
        role="img"
      >
        JB
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-1c4bfld"
    >
      <div
        aria-label="Sarah Drasner"
        class="chakra-uo84k3"
        role="img"
      >
        SD
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-ors11u"
    >
      <div
        aria-label="Anthony Fu"
        class="chakra-uo84k3"
        role="img"
      >
        AF
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-x22y92"
    >
      <div
        aria-label="Evan You"
        class="chakra-uo84k3"
        role="img"
      >
        EY
      </div>
      <!---->
    </span>
  </div>
</DocumentFragment>
`;

exports[`CAvatarGroup does not render number if max is reached 1`] = `
<DocumentFragment>
  <div
    class="chakra-avatar__group chakra-1rs5v3u"
    role="group"
  >
    <!---->
    <span
      class="chakra-avatar chakra-1exxn2a"
    >
      <div
        aria-label="Jonathan Bakebwa"
        class="chakra-uo84k3"
        role="img"
      >
        JB
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-1c4bfld"
    >
      <div
        aria-label="Sarah Drasner"
        class="chakra-uo84k3"
        role="img"
      >
        SD
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-ors11u"
    >
      <div
        aria-label="Anthony Fu"
        class="chakra-uo84k3"
        role="img"
      >
        AF
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-x22y92"
    >
      <div
        aria-label="Evan You"
        class="chakra-uo84k3"
        role="img"
      >
        EY
      </div>
      <!---->
    </span>
  </div>
</DocumentFragment>
`;

exports[`CAvatarGroup renders group with 2 by default 1`] = `
<DocumentFragment>
  <div
    class="chakra-avatar__group chakra-1rs5v3u"
    role="group"
  >
    <span
      class="chakra-avatar__excess chakra-1d6omom"
    >
      +2
    </span>
    <span
      class="chakra-avatar chakra-1xmzc4h"
    >
      <div
        aria-label="Anthony Fu"
        class="chakra-uo84k3"
        role="img"
      >
        AF
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-x22y92"
    >
      <div
        aria-label="Evan You"
        class="chakra-uo84k3"
        role="img"
      >
        EY
      </div>
      <!---->
    </span>
  </div>
</DocumentFragment>
`;

exports[`CAvatarGroup renders group with max prop passed 1`] = `
<DocumentFragment>
  <div
    class="chakra-avatar__group chakra-1rs5v3u"
    role="group"
  >
    <span
      class="chakra-avatar__excess chakra-1d6omom"
    >
      +1
    </span>
    <span
      class="chakra-avatar chakra-1cd629q"
    >
      <div
        aria-label="Sarah Drasner"
        class="chakra-uo84k3"
        role="img"
      >
        SD
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-ors11u"
    >
      <div
        aria-label="Anthony Fu"
        class="chakra-uo84k3"
        role="img"
      >
        AF
      </div>
      <!---->
    </span>
    <span
      class="chakra-avatar chakra-x22y92"
    >
      <div
        aria-label="Evan You"
        class="chakra-uo84k3"
        role="img"
      >
        EY
      </div>
      <!---->
    </span>
  </div>
</DocumentFragment>
`;
